feat: add sliding_up_panel dependency and integrate panel controller in FindFoodController and FindFoodScreen

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,7 @@ dependencies:
   get: ^4.6.6
   flutter_launcher_icons: ^0.14.3
   google_fonts: ^6.2.1
+  sliding_up_panel: ^2.0.0+1
 
 dev_dependencies:
   flutter_test:
