--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,7 +54,6 @@ dependencies:
   http: ^1.3.0
   chips_choice: ^3.0.1
   get: ^4.6.6
-  flutter_launcher_icons: ^0.14.3
   google_fonts: ^6.2.1
   sliding_up_panel: ^2.0.0+1
   carousel_slider: ^5.0.0
@@ -62,7 +61,12 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  flutter_launcher_icons: ^0.14.3
 
+flutter_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/images/logo.png"
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
