feat: integrate Google Maps API key management using dotenv; update AndroidManifest.xml and related files

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -31,6 +31,7 @@ android {
         targetSdk = flutter.targetSdkVersion
         versionCode = flutter.versionCode
         versionName = flutter.versionName
+         manifestPlaceholders["GOOGLE_MAPS_API_KEY"] = project.hasProperty("GOOGLE_MAPS_API_KEY") ? GOOGLE_MAPS_API_KEY : ""
     }
 
     buildTypes {
