fix: correct environment variable names in .env file creation step in GitHub Actions workflow

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,8 +26,8 @@ jobs:
         # Step to create .env file from GitHub Secrets
       - name: Create .env file
         run: |
-          echo "API_KEY=${{ secrets.GOOGLE_MAPS_API_KEY }}" >> .env
-          echo "DB_PASSWORD=${{ secrets.GEMINI_API_KEY }}" >> .env
+          echo "GOOGLE_MAPS_API_KEY=${{ secrets.GOOGLE_MAPS_API_KEY }}" >> .env
+          echo "GEMINI_API_KEY=${{ secrets.GEMINI_API_KEY }}" >> .env
 
       - run: flutter build apk --release --split-per-abi
       - run: |
