--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,6 +59,7 @@ dependencies:
   carousel_slider: ^5.0.0
   flutter_dotenv: ^5.2.1
   google_generative_ai: ^0.4.6
+  googleapis_auth: ^2.0.0
 
 dev_dependencies:
   flutter_test:
@@ -90,6 +91,7 @@ flutter:
   assets:
     - assets/images/
     - assets/icons/
+    - assets/json/
     - .env
 
   # An image asset can refer to one or more resolution-specific "variants", see
