--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -21,6 +21,8 @@ plugins {
     id "com.android.application" version "8.1.0" apply false
     // START: FlutterFire Configuration
     id "com.google.gms.google-services" version "4.3.15" apply false
+    id "com.android.tools.build:gradle" version "7.4.2" apply false
+
     // END: FlutterFire Configuration
     id "org.jetbrains.kotlin.android" version "2.1.21" apply false
 }
